# rabbitmq-Producer

./: CMakeLists.txt  producer.cpp  program2.cpp
